hotfix(final adjustments)

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 <p class="conteudo-texto"><strong>Comunidade:</strong>Valorizamos a conexão e o senso de comunidade entre os fãs de Taylor Swift, criando um espaço inclusivo e acolhedor para todos.</p>
                 <p class="conteudo-texto"><strong>Comunidade:</strong> Valorizamos a conexão e o senso de comunidade entre os fãs de Taylor Swift, criando um espaço inclusivo e acolhedor para todos.</p>
                 <p class="conteudo-texto"><strong>Excelência:</strong>  Comprometemo-nos com a excelência em tudo o que fazemos, desde a seleção de produtos até o atendimento ao cliente, visando sempre superar as expectativas.</p>
+                <p class="conteudo-texto"><strong>Excelência:</strong>  Comprometemo-nos com a excelência em tudo o que fazemos, desde a seleção de produtos até o atendimento ao cliente, visando sempre superar as expectativas.</p>
+                <p class="conteudo-texto"><strong>Excelência:</strong>  Comprometemo-nos com a excelência em tudo o que fazemos, desde a seleção de produtos até o atendimento ao cliente, visando sempre superar as expectativas.</p>
+
             </div>
         </div>
         <div class="box1">
